add_subdirectory(TestInterfaces)
add_subdirectory(BenchmarkDS)
add_subdirectory(DSGraph01)
add_subdirectory(DSGraph02)
add_subdirectory(DSGraph03)
add_subdirectory(DSGraph04)
add_subdirectory(DSGraph05)
add_subdirectory(DSGraph06)
add_subdirectory(DSGraph07)
add_subdirectory(TestBundleDSa)
add_subdirectory(TestBundleDSb)
add_subdirectory(TestBundleDSTOI1)
add_subdirectory(TestBundleDSTOI10)
add_subdirectory(TestBundleDSTOI12)
add_subdirectory(TestBundleDSTOI14)
add_subdirectory(TestBundleDSTOI15)
add_subdirectory(TestBundleDSTOI16)
add_subdirectory(TestBundleDSTOI2)
add_subdirectory(TestBundleDSTOI3)
add_subdirectory(TestBundleDSTOI5)
add_subdirectory(TestBundleDSTOI6)
add_subdirectory(TestBundleDSTOI7)
add_subdirectory(TestBundleDSTOI9)
add_subdirectory(ISpellCheckService)
add_subdirectory(IDictionaryService)
add_subdirectory(DSSpellChecker)
add_subdirectory(DSFrenchDictionary)
add_subdirectory(EnglishDictionary)
