add_subdirectory(TestInterfaces)
add_subdirectory(BenchmarkDS)
add_subdirectory(DSGraph01)
add_subdirectory(DSGraph02)
add_subdirectory(DSGraph03)
add_subdirectory(DSGraph04)
add_subdirectory(DSGraph05)
add_subdirectory(DSGraph06)
add_subdirectory(DSGraph07)
add_subdirectory(TestBindUnbindThrows)
add_subdirectory(TestBundleDSa)
add_subdirectory(TestBundleDSb)
add_subdirectory(TestBundleDSDRMU)
add_subdirectory(TestBundleDSDROU)
add_subdirectory(TestBundleDSDGMU)
add_subdirectory(TestBundleDSDGOU)
add_subdirectory(TestBundleDSSLE1)
add_subdirectory(TestBundleDSSLE2)
add_subdirectory(TestBundleDSTOI1)
add_subdirectory(TestBundleDSTOI10)
add_subdirectory(TestBundleDSTOI12)
add_subdirectory(TestBundleDSTOI14)
add_subdirectory(TestBundleDSTOI15)
add_subdirectory(TestBundleDSTOI16)
add_subdirectory(TestBundleDSTOI2)
add_subdirectory(TestBundleDSTOI3)
add_subdirectory(TestBundleDSTOI5)
add_subdirectory(TestBundleDSTOI6)
add_subdirectory(TestBundleDSTOI7)
add_subdirectory(TestBundleDSTOI8)
add_subdirectory(TestBundleDSTOI9)
add_subdirectory(TestBundleDSTOI18)
add_subdirectory(TestBundleDSTOI19)
add_subdirectory(TestBundleDSCA01)
add_subdirectory(TestBundleDSCA02)
add_subdirectory(TestBundleDSCA03)
add_subdirectory(TestBundleDSCA04)
add_subdirectory(TestBundleDSCA05)
add_subdirectory(TestBundleDSCA05a)
add_subdirectory(TestBundleDSCA07)
add_subdirectory(TestBundleDSCA08)
add_subdirectory(TestBundleDSCA09)
add_subdirectory(TestBundleDSCA12)
add_subdirectory(TestBundleDSCA16)
add_subdirectory(TestBundleDSCA20)
add_subdirectory(TestBundleDSCA21)
add_subdirectory(TestBundleDSCA24)
add_subdirectory(TestBundleDSCA26)
add_subdirectory(TestBundleDSCA27)
add_subdirectory(TestBundleDSDependent)
add_subdirectory(TestBundleDSDependentNoInject)
add_subdirectory(TestBundleDSDependentOptional)
add_subdirectory(TestBundleDSUpstreamDependencyA)
add_subdirectory(TestBundleDSUpstreamDependencyB)
add_subdirectory(ISpellCheckService)
add_subdirectory(IDictionaryService)
add_subdirectory(DSSpellChecker)
add_subdirectory(DSFrenchDictionary)
add_subdirectory(EnglishDictionary)
add_subdirectory(ManagedServiceAndFactoryBundle)
add_subdirectory(TestBundleManagedServiceDeadlock)
add_subdirectory(TestBundleManagedServiceFactory)
add_subdirectory(TestBundleNestedStartManagedSvc)
add_subdirectory(TestBundleMultipleManagedService)
add_subdirectory(TestBundleMultipleManagedServiceFactory)
